--- a/alfa.css
+++ b/alfa.css
@@ -1,6 +1,8 @@
 #header{
 	background-color: white;
-	margin: 0px;
+	position: absolute;
+	width: 100%;
+	height: 200px;
 }
 
 #title{
@@ -10,21 +12,24 @@
 #header h1{
 	font-size: 75px;
 	color: black;
-	padding-top: 60px;
-	padding-left: 100px;
+	margin: 10px 0px;
+	text-align: center;
 }
 
 #navBar{
-	margin-right: 5px;
-	background-color: black;
+	position: absolute;
+	right: 0px;
+	top: 130px;
 }
 
 #navBar ul{
+	top: 100px;
+	left: 300px;
+	right: 5px;
 	background-color: white;
 	list-style: none;
 	float: right;
 	border: solid white;
-	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
@@ -42,13 +47,18 @@
 
 
 
-body{font-size: 20px;
+body{
+	position: relative;
+	font-size: 20px;
 	color: blue;
 	text-align: center;
 	background-color: black;
 }
 
-table{width: 100%;
+table{
+	position: absolute;
+	top :300px;
+	width: 100%;
 	text-align: center;
 }
 
